# brython-typed

./: README.md  changelog.md  interpreter.py  setup.cfg  setup.py  webtypes.py
browser/: html.py  local_storage.py  object_storage.py  session_storage.py  webcomponent.py
browser/widgets/: menu.py
brython/: javascript.py
brython/browser/: _html_maketags.py  svg.py  websocket.py
brython/browser/widgets/: dialog.py
src/: javascript.py  webtypes.py
src/browser/: _BaseClasses.py  __init__.py  _html_maketags.py  html.py  markdown.py  template.py  timer.py
src/browser/widgets/: dialog.py
src/brython-typed/: javascript.py
src/brython-typed/browser/: aio.py  ajax.py  html.py
