[metadata]
name = brython-typed
version = 1.0.0
author = ENDERZOMBI102
author_email = enderzombi102.end@gmail.com
description = Types and IDE support for Brython 3.9.4
url = https://github.com/ENDERZOMBI102/brython-typed
project_urls =
    Bug Tracker = https://github.com/ENDERZOMBI102/brython-typed/issues
classifiers =
    License :: Public Domain
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6, <3.10

[options.packages.find]
where = src